--- a/styles/index.css
+++ b/styles/index.css
@@ -28,26 +28,40 @@ h3 {
 }
 .apartados {
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 200px 720px;
 }
-.apartados__item {
-  
-    max-width:480px;
-    overflow:hidden;
-position:relative;
-}
 .apartados__item-turismo {
-    grid-column: 1 / span 3;
     border:#000000 solid 1px;
 }
 .apartados__titulo {
-    grid-column: 1 / span 3;
+    
     background-color:#d9d9d9;
     display:flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 3rem;
+}
+.apartados__cajas {
+    display:flex;
+}
+.apartados__item {
+flex:1;
+position:relative;
+
+}
+@media screen and (max-width:700px) { 
+   .apartados__cajas {   
+     overflow-x:auto;
+     overflow-y:hidden;
+     scroll-snap-type: x-mandatory;
+
+}
+.apartados__item {
+    flex-basis:100%;
+     flex-shrink:0;
+scroll-snap-align: none center;
+}
 }
 .container {
     max-width:1440px;
@@ -60,6 +74,7 @@ position:relative;
     transition: 0.5s;
     background-color:red;
     overflow:hidden;
+    text-overflow:ellipsis;
     padding:1rem;
     height:100%;
 }
@@ -79,6 +94,8 @@ position:relative;
     padding-top:1.5rem;
     text-transform:uppercase;
 }
+
+/*menu superior */
 
 .header {
     position: sticky;
