--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,15 @@ h3 {
 .apartados__item {
   flex: 1;
   position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.trecking {
+  background-image: url("../assets/neom-wUyMk7ziLT0-unsplash.jpg");
+}
+.cabalgatas {
+  background-image: url("../assets/daniel-j-schwarz-2BWSUgdHWMI-unsplash.jpg");
 }
 @media screen and (max-width: 700px) {
   .apartados__cajas {
@@ -63,6 +72,12 @@ h3 {
     flex-shrink: 0;
     scroll-snap-align: none center;
   }
+  .logo {
+    flex-direction: column;
+  }
+  .logo__img {
+    order: -1;
+  }
 }
 .container {
   max-width: 1440px;
@@ -71,7 +86,7 @@ h3 {
 .item__overlay {
   position: absolute;
   top: 0;
-  transform: translateY(80%);
+  transform: translateY(100%);
   transition: 0.5s;
   background-color: red;
   overflow: hidden;
@@ -99,7 +114,7 @@ h3 {
 .modal-menu {
   top: 0;
   bottom: 0;
-  background-color: black;
+  background-color: #776db1;
   color: white;
   width: max-content;
   left: 0;
@@ -126,11 +141,11 @@ h3 {
   text-transform: uppercase;
 }
 .nav a:hover {
-  color: greenyellow;
+  color: black;
 }
 
 .abrir-menu {
-  position: absolute;
+  position: fixed;
   top: 5px;
   left: 10px;
   cursor: pointer;
@@ -141,6 +156,7 @@ h3 {
   height: 50px;
   gap: 8px;
   transition: 0.2s;
+  z-index: 98;
 }
 .abrir-menu:hover {
   gap: 10px;
@@ -155,6 +171,8 @@ h3 {
   position: fixed;
   display: flex;
   justify-content: center;
+  width: 100%;
+  z-index: 97;
 }
 .cerrar-menu {
   position: absolute;
@@ -182,4 +200,31 @@ h3 {
 }
 .cerrar-menu:hover div {
   transform: rotate(90deg);
+}
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.logo__img img {
+  max-width: 100%;
+}
+.logo__img {
+  height: 80px;
+  width: 80px;
+}
+.turismo p,
+.cordillera p {
+  text-transform: uppercase;
+  font-family: "PT Sans Narrow", sans-serif;
+  font-style: normal;
+  font-size: 3em;
+  color: #776db1;
+}
+.turismo p {
+  font-weight: 400;
+}
+.cordillera p {
+  font-weight: 700;
 }
