--- a/styles/index.css
+++ b/styles/index.css
@@ -65,7 +65,7 @@ h3 {
 @media screen and (max-width: 700px) {
   .apartados__cajas {
     overflow-x: auto;
-    scroll-snap-type: x-mandatory;
+    scroll-snap-type: x mandatory;
   }
   .apartados__item {
     flex-basis: 100%;
