--- a/styles/index.css
+++ b/styles/index.css
@@ -78,6 +78,12 @@ h3 {
   .logo__img {
     order: -1;
   }
+  h2 {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
 }
 .container {
   max-width: 1440px;
@@ -227,4 +233,12 @@ h3 {
 }
 .cordillera p {
   font-weight: 700;
+}
+.apartados__carousel {
+  width: 100%;
+  height: 720px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../assets/tim-mossholder-IIPFdGhHKBc-unsplash.jpg");
 }
