--- a/styles/index.css
+++ b/styles/index.css
@@ -65,14 +65,26 @@ h3 {
   flex: 1;
   position: relative;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-size: cover;
 }
 .trecking {
-  background-image: url("../assets/neom-wUyMk7ziLT0-unsplash.jpg");
+  background-image: url("../assets/trecking.jpg");
 }
 .cabalgatas {
-  background-image: url("../assets/daniel-j-schwarz-2BWSUgdHWMI-unsplash.jpg");
+  background-image: url("../assets/cabalgata2.jpg");
+}
+.buses {
+  background-image: url("../assets/bus-ciudad-mendoza-4.jpg");
+}
+.bodegas {
+  background-image: url("../assets/uvas.jpg");
+}
+.degustaciones {
+  background-image: url("../assets/vaso-vino-tinto.jpg");
+}
+.comidas {
+  background-image: url("../assets/casa-roja.jpg");
 }
 @media screen and (max-width: 700px) {
   .apartados__cajas {
@@ -106,11 +118,22 @@ h3 {
   top: 0;
   transform: translateY(100%);
   transition: 0.5s;
-  background-color: red;
+  background-color: white;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 1rem;
+  padding: 3rem;
   height: 100%;
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+.item__overlay p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
 }
 .apartados__titulo-excursiones {
   background-color: var(--naranja);
@@ -131,6 +154,9 @@ h3 {
 .apartados__item:hover .item__overlay {
   transform: translateY(30%);
 }
+.apartados__item:hover .apartados__h3 {
+  transform: translateY(0);
+}
 
 :nth-child(odd of .apartados__item) {
   background-color: #c7c7c7;
@@ -139,9 +165,19 @@ h3 {
   background-color: #cfcfcf;
 }
 .apartados__item h3 {
-  padding-left: 1rem;
-  padding-top: 1.5rem;
   text-transform: uppercase;
+}
+.apartados__h3 {
+  transform: translateY(21rem);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: 0.5s;
 }
 
 .modal-menu {
@@ -188,6 +224,9 @@ h3 {
   width: 50px;
   height: 50px;
   gap: 8px;
+  padding: 10px 10px;
+  /*background-color: var(--lila);
+  border-radius: 5px;*/
   transition: 0.2s;
   z-index: 98;
 }
@@ -199,6 +238,7 @@ h3 {
   border: solid 2px white;
   height: 2px;
   border-radius: 2px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .header {
@@ -265,6 +305,7 @@ h3 {
 }
 .hero {
   width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -287,6 +328,7 @@ h3 {
 
 .hero__item-inf {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -295,6 +337,19 @@ h3 {
   background-color: var(--naranja);
   padding-left: 30vw;
   padding-right: 30vw;
+}
+.hero::before {
+  content: "";
+  z-index: 10;
+  position: absolute;
+  bottom: 15vh;
+  width: 150px;
+  height: 268px;
+  left: 100px;
+  background-image: url("../assets/logo-transparente.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
 }
 
 .intro {
@@ -327,4 +382,29 @@ h3 {
 }
 .intro p a:hover {
   text-decoration: underline;
+}
+.icono {
+  width: 6rem;
+  height: 6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icono svg {
+  max-width: 90%;
+}
+#excursiones .icono {
+  border: 1px solid var(--naranja);
+}
+#excursiones .icon {
+  fill: var(--naranja);
+}
+#gastronomia .icono {
+  border: 1px solid var(--verde);
+}
+#gastronomia .icon {
+  fill: var(--verde);
 }
