--- a/styles/index.css
+++ b/styles/index.css
@@ -1,48 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "BenchNine", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  scroll-behavior: smooth;
-  color: white;
-}
-:root {
-  --naranja: #dd6928;
-  --verde: #216920;
-  --lila: #806eb2;
-  --turquesa: #40add7;
-  --azul: #30417f;
-  --gradiente-inicial: #677eb7;
-  --gradiente-final: #2e3851;
-}
-p,
-li {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-h1 {
-  font-size: 9rem;
-  font-family: "Birthstone Bounce", cursive;
-  font-weight: 500;
-  font-style: normal;
-  text-align: center;
-}
-h2,
-h3,
-h4,
-h5 {
-  font-weight: 400;
-}
-h2 {
-  font-size: 4rem;
-}
-h3 {
-  font-size: 2rem;
-}
 .apartados {
   display: grid;
   grid-template-columns: 1fr;
@@ -86,6 +41,9 @@ h3 {
 .comidas {
   background-image: url("../assets/casa-roja.jpg");
 }
+.spa {
+  background-image: url("../assets/Termas_Cacheuta_-_panoramio.jpg");
+}
 @media screen and (max-width: 700px) {
   .apartados__cajas {
     overflow-x: auto;
@@ -109,10 +67,7 @@ h3 {
     font-size: 1.5rem;
   }
 }
-.container {
-  max-width: 1440px;
-  width: 100%;
-}
+
 .item__overlay {
   position: absolute;
   top: 0;
@@ -180,102 +135,6 @@ h3 {
   transition: 0.5s;
 }
 
-.modal-menu {
-  top: 0;
-  bottom: 0;
-  background-color: #776db1;
-  color: white;
-  width: max-content;
-  left: 0;
-  position: fixed;
-  transform: translateX(-100%);
-  transition: 0.5s;
-  padding: 4em;
-  z-index: 99;
-}
-.activa {
-  transform: translateX(0);
-}
-.nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 2em;
-  align-items: flex-start;
-  list-style-type: none;
-}
-.nav a {
-  text-decoration: none;
-  color: white;
-  text-transform: uppercase;
-}
-.nav a:hover {
-  color: black;
-}
-
-.abrir-menu {
-  position: fixed;
-  top: 5px;
-  left: 10px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  gap: 8px;
-  padding: 10px 10px;
-  /*background-color: var(--lila);
-  border-radius: 5px;*/
-  transition: 0.2s;
-  z-index: 98;
-}
-.abrir-menu:hover {
-  gap: 10px;
-}
-
-.abrir-menu > * {
-  border: solid 2px white;
-  height: 2px;
-  border-radius: 2px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-}
-
-.header {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  z-index: 97;
-}
-.cerrar-menu {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-}
-.cerrar-menu > * {
-  border: solid 2px white;
-  border-radius: 2px;
-  height: 50px;
-  position: absolute;
-  background-color: white;
-  left: 25px;
-  transition: 0.2s;
-}
-.cerrar-menu div:first-child {
-  transform: rotate(45deg);
-}
-.cerrar-menu div:nth-child(2) {
-  transform: rotate(-45deg);
-}
-.cerrar-menu:hover div {
-  transform: rotate(90deg);
-}
 .logo {
   display: flex;
   justify-content: center;
@@ -335,8 +194,6 @@ h3 {
   opacity: 0.8;
   flex: 1;
   background-color: var(--naranja);
-  padding-left: 30vw;
-  padding-right: 30vw;
 }
 .hero::before {
   content: "";
@@ -407,4 +264,10 @@ h3 {
 }
 #gastronomia .icon {
   fill: var(--verde);
+}
+#spa .icono {
+  border: 1px solid var(--lila);
+}
+#spa .icon {
+  fill: var(--lila);
 }
