--- a/styles/index.css
+++ b/styles/index.css
@@ -15,13 +15,25 @@
 .apartados__cajas {
   display: flex;
   overflow: hidden;
+  position: relative;
 }
 .apartados__item {
-  flex: 1;
+  width: 50%;
   position: relative;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  transition: 0.5s;
+}
+.apartados__extra {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transform: translateX(100%);
+  transition: 0.3s;
+  z-index: 100;
+  background-color: white;
 }
 .trecking {
   background-image: url("../assets/trecking.jpg");
@@ -67,6 +79,9 @@
     font-size: 1.5rem;
   }
 }
+.angosto {
+  width: 30%;
+}
 
 .item__overlay {
   position: absolute;
@@ -90,6 +105,7 @@
   font-style: normal;
   color: black;
 }
+
 .apartados__titulo-excursiones {
   background-color: var(--naranja);
 }
@@ -113,12 +129,6 @@
   transform: translateY(0);
 }
 
-:nth-child(odd of .apartados__item) {
-  background-color: #c7c7c7;
-}
-:nth-child(even of .apartados__item) {
-  background-color: #cfcfcf;
-}
 .apartados__item h3 {
   text-transform: uppercase;
 }
@@ -270,4 +280,37 @@
 }
 #spa .icon {
   fill: var(--lila);
+}
+.vermas {
+  color: var(--naranja);
+}
+.vermas__p {
+  align-self: end;
+}
+.cerrar-extras {
+  left: 10px;
+  top: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+}
+.cerrar-extras > * {
+  border: solid 2px var(--naranja);
+  border-radius: 2px;
+  height: 50px;
+  position: absolute;
+  background-color: var(--naranja);
+  left: 25px;
+  transition: 0.2s;
+}
+.cerrar-extras div:first-child {
+  transform: rotate(45deg);
+}
+.cerrar-extras div:nth-child(2) {
+  transform: rotate(-45deg);
+}
+.cerrar-extras:hover div {
+  transform: rotate(90deg);
 }
