--- a/styles/index.css
+++ b/styles/index.css
@@ -35,9 +35,13 @@
   z-index: 100;
   background-color: white;
   display: flex;
-  flex-direction: column;
+  gap: 2rem;
+  justify-content: space-between;
   align-items: start;
-  padding: 2rem;
+  overflow: auto;
+}
+.apartados__extra--contenido {
+  order: 0;
 }
 .extra__izquierda {
   transform: translateX(-100%);
@@ -107,10 +111,13 @@
   padding: 3rem;
   height: 70%;
   display: flex;
-  gap: 2rem;
+  gap: 3rem;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
+}
+.item__overlay > * {
+  height: 30%;
 }
 
 .apartados__titulo-excursiones {
@@ -129,10 +136,17 @@
   background-color: var(--azul);
 }
 
-.apartados__item:hover .item__overlay {
+/*.apartados__item:hover .item__overlay {
   transform: translateY(0);
 }
 .apartados__item:hover .apartados__h3 {
+  transform: translateY(0);
+}*/
+
+.apartados__overlay:hover .item__overlay {
+  transform: translateY(0);
+}
+.apartados__overlay:hover .apartados__h3 {
   transform: translateY(0);
 }
 
@@ -285,6 +299,8 @@
   border: none;
   padding: 0.4rem;
   border-radius: 0.2rem;
+  justify-self: end;
+  font-family: "Montserrat", sans-serif;
 }
 #excursiones button.vermas {
   color: var(--naranja);
@@ -309,19 +325,17 @@
   width: 50px;
   height: 50px;
   position: relative;
+  order: 1;
 }
 .cerrar-extras > * {
   border: solid 2px;
   border-radius: 2px;
-  height: 50px;
+  height: 40px;
   position: absolute;
   left: 25px;
   transition: 0.2s;
 }
 
-.extra__izquierda > div.cerrar-extras {
-  align-self: end;
-}
 #excursiones .cerrar-extras > * {
   border-color: var(--naranja);
   background-color: var(--naranja);
@@ -339,4 +353,42 @@
 }
 .cerrar-extras:hover div {
   transform: rotate(90deg);
+}
+.apartados__extra li {
+  list-style-type: none;
+  line-height: 2rem;
+}
+.apartados__extra a {
+  color: black;
+  text-decoration: none;
+}
+.apartados__extra a:hover {
+  text-decoration: underline;
+}
+
+.apartados__extra li::before {
+  content: "\2B95";
+  margin-right: 2rem;
+  font-size: 1.1rem;
+}
+#excursiones .apartados__extra li::before {
+  color: var(--naranja);
+}
+.apartados__extra--contenido {
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow-y: auto;
+}
+
+.notas {
+  font-size: 0.8rem;
+  text-align: end;
+}
+.notas svg {
+  fill: black;
+  height: 1rem;
+  width: 1rem;
+  margin-left: 1rem;
 }
