--- a/styles/index.css
+++ b/styles/index.css
@@ -38,7 +38,6 @@
   gap: 2rem;
   justify-content: space-between;
   align-items: start;
-  overflow: auto;
 }
 .apartados__extra--contenido {
   order: 0;
@@ -135,13 +134,6 @@
 .apartados__titulo-traslados {
   background-color: var(--azul);
 }
-
-/*.apartados__item:hover .item__overlay {
-  transform: translateY(0);
-}
-.apartados__item:hover .apartados__h3 {
-  transform: translateY(0);
-}*/
 
 .apartados__overlay:hover .item__overlay {
   transform: translateY(0);
@@ -322,6 +314,8 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+
+  min-width: 50px;
   width: 50px;
   height: 50px;
   position: relative;
@@ -381,14 +375,37 @@
   gap: 1rem;
   overflow-y: auto;
 }
+.fichas {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+}
 
 .notas {
+  display: inline-block;
   font-size: 0.8rem;
-  text-align: end;
+  border-radius: 0.4rem;
+  padding: 0.3rem 0.5rem;
+  cursor: pointer;
+}
+
+.notas:nth-child(2) {
+  background-color: green;
+  color: white;
+}
+.notas:first-child {
+  background-color: white;
+  border: 1px solid black;
 }
 .notas svg {
+  height: 1.2rem;
+  width: 1.2rem;
+  margin-left: 0.5rem;
+  vertical-align: middle;
+}
+svg.whatsapp {
+  fill: white;
+}
+svg.folder {
   fill: black;
-  height: 1rem;
-  width: 1rem;
-  margin-left: 1rem;
 }
