--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,8 @@
 }
 .apartados__extra--contenido {
   order: 0;
+  max-height: 100%;
+  overflow-y: auto;
 }
 .extra__izquierda {
   transform: translateX(-100%);
@@ -54,23 +56,26 @@
 .trecking {
   background-image: url("../assets/trecking.jpg");
 }
-.cabalgatas {
-  background-image: url("../assets/cabalgata2.jpg");
+.cultura {
+  background-image: url("../assets/inca.jpg");
 }
 .buses {
   background-image: url("../assets/bus-ciudad-mendoza-4.jpg");
 }
 .bodegas {
-  background-image: url("../assets/uvas.jpg");
+  background-image: url("../assets/copavino.jpg");
 }
 .degustaciones {
   background-image: url("../assets/vaso-vino-tinto.jpg");
 }
-.comidas {
-  background-image: url("../assets/casa-roja.jpg");
+.gastronomia {
+  background-image: url("../assets/zapallo.jpg");
 }
 .spa {
-  background-image: url("../assets/Termas_Cacheuta_-_panoramio.jpg");
+  background-image: url("../assets/spa.jpg");
+}
+.sup {
+  background-image: url("../assets/sup.jpg");
 }
 @media screen and (max-width: 700px) {
   .apartados__cajas {
@@ -101,22 +106,19 @@
 
 .item__overlay {
   position: absolute;
-  top: 30%;
+  top: 40%;
   transform: translateY(100%);
   transition: 0.5s;
   background-color: white;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 3rem;
-  height: 70%;
+  height: 60%;
   display: flex;
   gap: 3rem;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-}
-.item__overlay > * {
-  height: 30%;
 }
 
 .apartados__titulo-excursiones {
@@ -256,6 +258,7 @@
 }
 .icono {
   width: 6rem;
+  min-height: 6rem;
   height: 6rem;
   overflow: hidden;
   border-radius: 50%;
@@ -353,7 +356,7 @@
   line-height: 2rem;
 }
 .apartados__extra a {
-  color: black;
+  color: #555555;
   text-decoration: none;
 }
 .apartados__extra a:hover {
@@ -369,7 +372,7 @@
   color: var(--naranja);
 }
 .apartados__extra--contenido {
-  padding: 3rem;
+  padding: 1rem 3rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -395,7 +398,7 @@
 }
 .notas:first-child {
   background-color: white;
-  border: 1px solid black;
+  border: 1px solid #555555;
 }
 .notas svg {
   height: 1.2rem;
@@ -407,5 +410,15 @@ svg.whatsapp {
   fill: white;
 }
 svg.folder {
-  fill: black;
+  fill: #555555;
+}
+.info {
+  background-color: #f5f5f5;
+  padding: 2em;
+}
+.info svg {
+  height: 1rem;
+  width: 1rem;
+  margin-right: 1rem;
+  opacity: 0.8;
 }
