--- a/styles/index.css
+++ b/styles/index.css
@@ -194,7 +194,7 @@
 .hero__item-sup {
   height: 80%;
   justify-content: flex-end;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.7rem;
 }
 
 .hero__item-inf {
@@ -211,7 +211,7 @@
   content: "";
   z-index: 10;
   position: absolute;
-  bottom: 15vh;
+  bottom: 25vh;
   width: 150px;
   height: 268px;
   left: 100px;
@@ -220,6 +220,12 @@
   background-position: center center;
   background-size: contain;
 }
+/*
+top: 30px;
+  width: 100px;
+  height: 179px;
+  right: 50px;
+*/
 
 .intro {
   height: 20vh;
