--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,44 @@
 .apartados__item-turismo {
   border: #000000 solid 1px;
 }
+.apartados__item.paquetes {
+  width: 30%;
+}
+.apartados__item.paquetes__info {
+  padding: 3rem;
+}
+#paquetes p,
+#paquetes li,
+#paquetes li a {
+  color: #555555;
+}
+.paquetes__info {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 1rem;
+  flex: 1;
+  order: 0;
+  max-height: 100%;
+}
+.paquetes__info li {
+  list-style-type: none;
+  line-height: 2rem;
+}
+.paquetes__info a {
+  text-decoration: none;
+}
+.paquetes__info a:hover {
+  text-decoration: underline;
+}
+
+.paquetes__info li::before {
+  content: "\2B95";
+  margin-right: 2rem;
+  font-size: 1.1rem;
+  color: var(--turquesa);
+}
+
 .apartados__titulo {
   display: flex;
   flex-direction: column;
@@ -39,11 +77,7 @@
   justify-content: space-between;
   align-items: start;
 }
-.apartados__extra--contenido {
-  order: 0;
-  max-height: 100%;
-  overflow-y: auto;
-}
+
 .extra__izquierda {
   transform: translateX(-100%);
   left: 0;
@@ -76,6 +110,9 @@
 }
 .sup {
   background-image: url("../assets/sup.jpg");
+}
+.paquetes {
+  background-image: url("../assets/turista-valijas.jpg");
 }
 @media screen and (max-width: 700px) {
   .apartados__cajas {
@@ -404,6 +441,8 @@ top: 30px;
   gap: 1rem;
   overflow-y: auto;
   flex: 1;
+  order: 0;
+  max-height: 100%;
 }
 
 .fichas {
