fondo del body en negro para cuando la pantalla mide más de 1440

--- a/styles/general.css
+++ b/styles/general.css
@@ -6,6 +6,10 @@
   scroll-behavior: smooth;
   color: white;
 }
+body,
+html {
+  background-color: #444444;
+}
 :root {
   --naranja: #dd6928;
   --verde: #216920;
