--- a/styles/general.css
+++ b/styles/general.css
@@ -172,7 +172,8 @@ h3 {
 #subir a svg {
   max-width: 90%;
   max-height: 90%;
-  fill: var(--azul);
+  fill: white;
+  filter: drop-shadow(0 0 0.2rem gray);
 }
 #subir.invisible {
   bottom: -5rem;
